--- a/player.css
+++ b/player.css
@@ -1,5 +1,7 @@
 #watch-player {
     position: relative;
+    width: 640px;
+    height: 480px;
 }
 #watch-player iframe {
     border: 1px solid #000;
