--- a/player.css
+++ b/player.css
@@ -4,9 +4,16 @@
     height: 480px;
 }
 #watch-player iframe {
-    border: 1px solid #000;
+    width: 100%;
+    height: 100%;
+    border: medium none;
+}
+.watch-player-container {
     width: 640px;
     height: 480px;
+    overflow: auto;
+    overflow-y: hidden;
+    -ms-overflow-y: hidden;
 }
 #watch-player-mouse {
     display: block;
