--- a/player.css
+++ b/player.css
@@ -22,8 +22,15 @@
     width: 15px;
     border-radius: 50%;
     padding: 10px;
-    background: url('img/cursor.png') no-repeat #F0E895 50% 50%;
+    background: url('img/cursor.png') no-repeat #fff 50% 50%;
     transition: all 1s ease;
+}
+#watch-player-mouse.click {
+    background: url('img/cursor.png') no-repeat #F02020 50% 50%;
+    border: 2px solid #999;
+    transition: all 0.3s ease;
+    -webkit-box-shadow: 5px 5px 10px 3px #999;
+    box-shadow: 5px 5px 10px 3px #999;
 }
 #history {
     display: none;
